<?xml version="1.0" encoding="utf-8"?>
  <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:background="#DCB2B2"
      android:backgroundTint="#9FE3D1D1"
      android:foreground="@drawable/n"
      android:foregroundGravity="fill"
      android:foregroundTint="#00FFFFFF"
      android:keepScreenOn="true"
      android:visibility="visible"
      tools:context=".MainActivity">

    <TextView
        android:id="@+id/txvNumero"
        android:layout_width="405dp"
        android:layout_height="66dp"
        android:gravity="center"
        android:text="@string/txvNumero"
        android:textAlignment="center"
        android:textColor="#631313"
        android:textColorHint="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.411" />

    <TextView
        android:id="@+id/txvUsuario"
        android:layout_width="402dp"
        android:layout_height="74dp"
        android:gravity="center"
        android:text="@string/txvUsuario"
        android:textAlignment="center"
        android:textColor="#631313"
        android:textColorHint="#910D0D"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.111"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.173" />

  <TextView
      android:id="@+id/txvTitulo"
      android:layout_width="243dp"
      android:layout_height="75dp"
      android:gravity="center"
      android:text="Numeros Factoriales"
      android:textAlignment="center"
      android:textColor="#631313"
      android:textColorHint="#910D0D"
      android:textSize="24sp"
      android:textStyle="bold"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.91"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.009" />

  <TextView
      android:id="@+id/txvResultado"
      android:layout_width="405dp"
      android:layout_height="79dp"
      android:background="#DD7B7B"
      android:gravity="center"
      android:text="@string/txvnum"
      android:textAlignment="center"
      android:textSize="18sp"
      android:textStyle="bold"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="1.0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.763" />

  <EditText
        android:id="@+id/txtNombre"
        android:layout_width="401dp"
        android:layout_height="54dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3"
        tools:text="Ingrese un nombre" />


    <Button
        android:id="@+id/btnFactorial"
        android:layout_width="216dp"
        android:layout_height="89dp"
        android:backgroundTint="#8A2D2D"
        android:text="@string/btnFactorial"
        app:icon="@android:drawable/ic_menu_help"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.58"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.934" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="153dp"
        android:layout_height="74dp"
        android:layout_marginEnd="192dp"
        android:background="#EAC0C0"
        android:backgroundTint="#DDB6B6"
        android:backgroundTintMode="screen"
        android:contentDescription="@string/imageView"
        android:foreground="@drawable/png_transparent_ghana_brand_fante_logo_trademark_others_thumbnail"
        android:foregroundTint="#803232"
        android:foregroundTintMode="screen"
        android:outlineProvider="background"
        android:scaleType="centerInside"
        android:verticalScrollbarPosition="left"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.012"
        app:srcCompat="@drawable/png_transparent_ghana_brand_fante_logo_trademark_others_thumbnail"
        app:tint="#C34040" />

  <EditText
      android:id="@+id/txtNumero"
      android:layout_width="382dp"
      android:layout_height="70dp"
      android:layout_marginStart="36dp"
      android:autofillHints=""
      android:ems="10"
      android:inputType="number|textPersonName"
      android:text="@string/txtNumero"
      android:textAlignment="center"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="1.0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.617" />

</androidx.constraintlayout.widget.ConstraintLayout>